# sample_sensor_kit_launch_truck

common_sensor_launch/: package.xml
common_sensor_launch/config/: camera0_info.yaml
common_sensor_launch/launch/: gstreamer_image_pub.launch.py  image_proc.launch.py  image_publisher_file.launch.py  lslidar_ch128x1.launch.xml  lslidar_node_container.launch.py
sample_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
sample_sensor_kit_description/urdf/: sensor_kit.xacro
sample_sensor_kit_launch/: package.xml
sample_sensor_kit_launch/launch/: autopilot.launch.xml  camera.launch.xml  gnss.launch.xml  imu.launch.xml  lidar.launch.xml  pointcloud_preprocessor.launch.py  radar.launch.xml  sensing.launch.xml
