<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sample_sensor_kit_launch</name>
  <version>0.1.0</version>
  <description>The sample_sensor_kit_launch package</description>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
  <exec_depend>common_sensor_launch</exec_depend>
  <exec_depend>gnss_poser</exec_depend>
  <exec_depend>tamagawa_imu_driver</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>lslidar_driver</exec_depend>
  <exec_depend>pe_ars408_ros</exec_depend>
  <exec_depend>gps_network_pkg</exec_depend>
  <exec_depend>image_common</exec_depend>
  <exec_depend>image_pipeline</exec_depend>
  <exec_depend>vision_opencv</exec_depend>
  <exec_depend>autopilot_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
